Issue #SB-12508 fix: Modal overflow issue

--- a/src/app/client/src/assets/styles/component/_modal.scss
+++ b/src/app/client/src/assets/styles/component/_modal.scss
@@ -50,7 +50,7 @@
         &.normal {
             max-width: $sb-modal-normal-width;
             .sb-modal-content {
-                //max-height: 380px;
+                max-height: 380px;
             }
         }
         &.large {
